--- a/keras2onnx.ipynb
+++ b/keras2onnx.ipynb
@@ -2,9 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.0\n",
+      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 23, 23, 32)        1184      \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 20, 20, 64)        32832     \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 19, 19, 128)       32896     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 9, 9, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 9, 9, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 10368)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1024)              10617856  \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 62)                63550     \n",
+      "=================================================================\n",
+      "Total params: 10,748,318\n",
+      "Trainable params: 10,748,318\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import load_model\n",
@@ -19,15 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: tensorflow-model-directory\\assets\n"
+     ]
+    }
+   ],
    "source": [
-    "import tensorflow as tf\n",
     "# Change the model filepath if necessary\n",
     "\n",
     "# Load your Keras model\n",
-    "model = tf.keras.models.load_model('model.h5')\n",
+    "model = tf.keras.models.load_model('model.h5', compile=False)\n",
     "\n",
     "# Export to SavedModel\n",
     "model.save('tensorflow-model-directory', save_format='tf')"
@@ -35,17 +77,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n",
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 23, 23, 32)        1184      \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 20, 20, 64)        32832     \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 19, 19, 128)       32896     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 9, 9, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 9, 9, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 10368)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1024)              10617856  \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 62)                63550     \n",
+      "=================================================================\n",
+      "Total params: 10,748,318\n",
+      "Trainable params: 10,748,318\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.python.framework.convert_to_constants import convert_variables_to_constants_v2\n",
-    "\n",
     "# Load the model\n",
     "loaded_model = tf.keras.models.load_model('tensorflow-model-directory')\n",
     "\n",
-    "# Check its architecture\n",
+    "# Check summary\n",
     "loaded_model.summary()"
    ]
   },
