Included conversion line in  Jupyter Notebook

--- a/keras2onnx.ipynb
+++ b/keras2onnx.ipynb
@@ -12,7 +12,7 @@
     "print(tf.__version__)\n",
     "\n",
     "# Change the model filepath if necessary\n",
-    "model = load_model('./model.h5')\n",
+    "model = load_model('./model.h5', compile=False)\n",
     "\n",
     "model.summary()"
    ]
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Load the model\n",
-    "loaded_model = tf.keras.models.load_model('tensorflow-model-directory')\n",
+    "loaded_model = tf.keras.models.load_model('tensorflow-model-directory', compile=False)\n",
     "\n",
     "# Check summary\n",
     "loaded_model.summary()"
@@ -50,7 +50,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Convert to ONNX\n",
+    "!python -m tf2onnx.convert --saved-model tensorflow-model-directory --output model.onnx --opset 13\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import onnx\n",
+    "\n",
+    "# Load the ONNX model\n",
+    "onnx_model = onnx.load(\"model.onnx\")\n",
+    "\n",
+    "print(onnx_model.graph.node)"
+   ]
   }
  ],
  "metadata": {
